--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 amazonProperties:
   endpointUrl: https://s3.us-east-2.amazonaws.com
-  accessKey: XXXXXXXXXXXXXXXXX
-  secretKey: XXXXXXXXXXXXXXXXXXXXXXXXXX
-  bucketName: your-s3-bucket-name
-  region: your-bucket-region
-
-
+  accessKey: AKIAJLKGOJ7DXPX4PLUQ
+  secretKey: oqIqPCSdWrdzBW6i94oUTcH450tmxoKpo/qdGGQk
+  bucketName: s3-bucket-test-web
+  region: us-east-2
